# FurinaLC

./: .gitignore  .gitmodules  FAQ.md  README.md  main.py  pyproject.toml  redirect.py  scrape.py
api/: check_season_log.py  claim_closed_gacha_rewards.py  enter_stage_battle.py  exit_stage_battle.py  fetch_latest_synchronous_data.py  get_dungeon_save_info_all.py  get_user_coupon_state.py  load_user_data_all.py  play_gacha.py  refresh_mailbox.py  update_formation.py  use_coupon.py
database/: .txt  announcer.py  client.py  ego.py  formation.py  item.py  personality.py  user.py  userbanner.py  userprofile.py  userticket.py
database/railway_dungeon/: save_info.py
database/user_profile/: banner.py  profile.py  ticket.py  user.py
database/user_stuff/: ego.py  (+4 more)
iap/: update_steam_pending_purchase.py
limbus/: crypto.py  events.py  formats.py  requests.py  responses.py  themes.py
login/: check_client_version.py  get_terms_of_use_state_all.py  sign_in_as_steam.py
middleware/: encryption.py  key.py  schnajang.py
models/: __init__.py  packets.py  server.py  types.py
resource/: .txt  __init__.py  ego.py  item.py  personality.py
resources/: battlepass.py  chance.py  ego.py  iap_membership.py  item.py  personality.py  stage_node_reward.py  unlockcode_subchapter.py  userbanner.py  userticket.py
server/: __init__.py  __main__.py  adder.py  config.py
solemn/: database.py  ego_util.py  formation_util.py  get_util.py  insert_util.py  item_util.py  modify_util.py  personality_util.py
util/: coupon.py  data.py  id.py  time.py  user.py
utils/: README.md  __init__.py
(+83 files in other folders)
